Fix contact form showing underneath the contact form message on Safari

--- a/css/sworksdesign.css
+++ b/css/sworksdesign.css
@@ -108,8 +108,7 @@ hr {
 }
 
 .flippable {
-  -webkit-backface-visibility: hidden;
-          backface-visibility: hidden;
+  backface-visibility: hidden;
 }
 
 /* IDs */
